chore: add package.json and update package-lock.json with ngrok dependency

--- a/halouniverse-v1/.env
+++ b/halouniverse-v1/.env
@@ -1,4 +1,4 @@
-GROQ_API_KEY= GROQ_API_KEY
-TAVILY_API_KEY = TAVILY_API_KEY
+GROQ_API_KEY= "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"
+TAVILY_API_KEY = "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"
 
 
