--- a/halouniverse-v1/package.json
+++ b/halouniverse-v1/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
   "dotenv": "^16.4.5",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+  "express": "^4.19.2",
+  "multer": "^2.0.0",
+  "sharp": "^0.32.5"
   },
   "engines": {
     "node": ">=18"
